Screenshot: Fix aspect ratio.

The aspect ratio of the preview was wrong for two reasons:
 * The height of the preview was always assumed to be 150 while it actually
   depends on the layout.
 * The size was then only set using SetExplicitMinSize(), which is not
   sufficient to actually change the size to the desired value.

Fixes #11644.

Signed-off-by: Augustin Cavalier <waddlesplash@gmail.com>